--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet-async": "^2.0.5",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.12"
