--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-helmet-async": "^2.0.5",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12",
     "zustand": "^5.0.8"
   },
